--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,38 @@
-html,
-body,
 .App {
-  height: 100vh;
-  width: 100vw;
-  padding: 0;
-  margin: 0;
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
-  font-size: 100%;
 }
 
-.App {
-  background: url("./asset/bg-img.jpg") no-repeat center center fixed;
-  background-size: cover;
+.App-link {
+  color: #61dafb;
 }
 
-h1 {
-  font-size: 9rem;
-}
-
-h2 {
-  font-size: 3rem;
-}
-
-.userInput,
-.userInput:active,
-.userInput:focus {
-  color: white;
-  font-size: 3rem;
-  background: transparent;
-  border: none;
-  border-radius: 0;
-  border-bottom: 2px solid white;
-  width: 30rem;
-}
-
-.error {
-  color: rgb(254, 73, 73);
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
