--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,10 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
+}
+h3 {
+  font-size: 2rem;
 }
 
 .userInput,
@@ -29,11 +32,30 @@ h2 {
   font-size: 3rem;
   background: transparent;
   border: none;
-  border-radius: 0;
+  border-radius: 0 !important;
   border-bottom: 2px solid white;
   width: 30rem;
 }
 
 .error {
   color: rgb(254, 73, 73);
+}
+
+@media only screen and (min-device-width: 360px) and (max-device-width: 812px) {
+  h1 {
+    font-size: 5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+  h3 {
+    font-size: 2rem;
+  }
+
+  .userInput,
+  .userInput:active,
+  .userInput:focus {
+    width: 15rem;
+  }
 }
