--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body,
   margin: 0;
   color: white;
   font-size: 100%;
+  line-height: normal;
 }
 
 .App {
@@ -19,17 +20,25 @@ h1 {
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 3rem;
 }
+
 h3 {
   font-size: 2rem;
+}
+p {
+  font-size: 1.5rem;
+}
+
+.greeting {
+  font-size: 3rem;
 }
 
 .userInput,
 .userInput:active,
 .userInput:focus {
   color: white;
-  font-size: 3rem;
+  font-size: 2rem;
   background: transparent;
   border: none;
   border-radius: 0 !important;
@@ -41,21 +50,35 @@ h3 {
   color: rgb(254, 73, 73);
 }
 
+.weather-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1rem;
+}
+
+.focus-text {
+  font-size: 2rem;
+}
+
+.focus {
+  margin-top: 5rem;
+}
+
+.focus input {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
 @media only screen and (min-device-width: 360px) and (max-device-width: 812px) {
-  h1 {
-    font-size: 5rem;
+  html,
+  body,
+  .App {
+    font-size: 65%;
   }
 
-  h2 {
-    font-size: 2rem;
-  }
-  h3 {
-    font-size: 2rem;
-  }
-
-  .userInput,
-  .userInput:active,
-  .userInput:focus {
-    width: 15rem;
+  .focus input {
+    height: auto;
+    width: auto;
   }
 }
