--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,28 @@ p {
   width: 1.5rem;
 }
 
+.focus-edit {
+  background: transparent;
+  color: gold;
+  font-size: 1.5rem;
+  margin: auto 1rem;
+}
+
+.focus-edit:hover {
+  transform: scale(1.3);
+}
+
+.focus-delete {
+  background: transparent;
+  color: red;
+  font-size: 1.5rem;
+  margin: auto 1rem;
+}
+
+.focus-delete:hover {
+  transform: scale(1.3);
+}
+
 @media only screen and (min-device-width: 360px) and (max-device-width: 812px) {
   html,
   body,
