--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,9 @@ li:hover {
 }
 
 .bg {
-  background: url("https://source.unsplash.com/random/1920x888/?dark%20wallpaper,forest")
-    no-repeat center center fixed;
+  /* background: url("https://source.unsplash.com/random/1920x888/?dark%20wallpaper,forest")
+    no-repeat center center fixed; */
+  background: url("./asset/bg-img.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -97,11 +98,13 @@ p {
   color: var(--yellow);
   margin: auto 1rem;
 }
-.focus-edit {
+.focus-edit,
+.focus-delete {
   font-size: 1.5rem;
 }
 
-.focus-edit:hover {
+.focus-edit:hover,
+.focus-delete:hover {
   transform: scale(1.3);
 }
 
@@ -112,14 +115,11 @@ p {
   margin: auto 1rem;
 }
 
-.focus-delete {
-  font-size: 1.5rem;
+.todo-save {
+  background: transparent;
+  color: var(--green);
+  margin: auto 1rem;
 }
-
-.focus-delete:hover {
-  transform: scale(1.3);
-}
-
 .quote {
   position: fixed;
   bottom: 1rem;
@@ -161,12 +161,24 @@ p {
 }
 
 .todo {
+  user-select: none;
   align-items: baseline;
   margin: 0 0 8px 0;
   word-break: break-word;
   text-align: left;
   align-items: baseline;
   justify-content: space-between;
+}
+
+.todo-edit-input {
+  height: 10px;
+  font-size: initial;
+  font-family: "Montserrat", sans-serif;
+  color: var(--text-color);
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid var(--text-color);
+  border-radius: 0 !important;
 }
 
 ol::-webkit-scrollbar {
